# bluepopcorn

./: .env.example  .gitignore  CLAUDE.md  README.md  com.bluepopcorn.daemon.plist.example  com.imessagarr.daemon.plist.example  config.toml  instructions.md  memory.md  personality.md  pyproject.toml  restart.sh  todo.md  wrapper.swift
.github/workflows/: deploy-landing.yml
BluePopcorn.app/Contents/: Info.plist
docs/: llm-instructions-review.md  ref-design-style-guide.md  ref-macos.md  ref-seerr-api.md  todo-apimodels.md  todo-appbundle.md  todo-contacts.md  todo-futureimprovements-priority.md  todo-futureimprovements.md  todo-markdownmemory.md  todo-mcp.md  todo-oauth.md  todo-telegram.md
iMessagarr.app/Contents/: Info.plist
imessage/: com.bluepopcorn.daemon.plist.example  config.toml  restart.sh  wrapper.swift
landing/: index.html  package.json  vite.config.js
landing/public/: _headers  llms.txt  robots.txt  site.webmanifest  sitemap.xml
landing/src/: App.css  App.jsx  index.css
src/bluepopcorn/: __main__.py  cli.py  compression.py  config.py  discover.py  enrich.py  llm.py  memory.py  monitor.py  morning_digest.py  posters.py  prompts.py  request_tracker.py  schemas.py  seerr.py  sender.py  types.py  utils.py  watcher.py  weather.py  webhooks.py
src/imessagarr/: __main__.py  actions.py  cli.py  config.py  db.py  llm.py  monitor.py  (+6 more)
tests/: _logging.py  test_attributed_body.py  test_clarify_probe.py  test_conversations.py  test_mcp_tools.py  test_morning_digest.py  test_request_honesty.py  test_request_media_type.py  test_unbacked_tmdb_loop.py
(+37 files in other folders)
