[project]
name = "bluepopcorn"
version = "0.1.0"
description = "Smart Seerr MCP server for movie and TV requests"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "mcp>=1.26.0,<2",
    "fastapi>=0.135",
    "uvicorn>=0.41",
]

[project.optional-dependencies]
imessage = [
    "anthropic>=0.49",
    "aiosqlite>=0.20",
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluepopcorn"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
markers = [
    "integration: hits real Seerr API",
]
asyncio_mode = "auto"
